refactor: renomeia ProductCatalogSyncService para ProductCatalogPublisher e simplifica publicação de eventos
- Remove dependência do ProductRepositoryPort do serviço
- Remove lógica de decisão (published/unpublished) do service
- Centraliza responsabilidade apenas na publicação de eventos
- Ajusta construtor e ordem de dependências
- Melhora import do ProductSnapshot no ProductPublishedEvent